--- a/package.json
+++ b/package.json
@@ -25,18 +25,20 @@
   },
   "bugs": "https://github.com/abenhamdine/perf-logger/issues",
   "devDependencies": {
+    "@types/chai": "4.2.21",
     "coveralls": "3.0.9",
-    "eslint": "6.8.0",
-    "istanbul": "0.4.5",
+    "@typescript-eslint/parser": "4.28.3",
+    "@typescript-eslint/eslint-plugin": "4.28.3",
     "it-each": "0.4.0",
-    "jsdoc": "3.6.3",
-    "mocha": "5.2.0"
+    "mocha": "9.0.2",
+    "typescript": "4.3.5",
+    "chai": "4.3.4",
+    "nyc": "15.1.0"
   },
   "dependencies": {
-    "chai": "~4.2.0",
-    "colors": "~1",
-    "lodash": "~4",
-    "moment": "2.24.0",
-    "tty-table": "^2.0.0"
+    "colors": "1",
+    "lodash": "4",
+    "moment": "2.29.1",
+    "tty-table": "4.1.3"
   }
 }
